Fixed odd screen overflow

--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
   /* background:  #1c1d1f; */
   color: #ffffff;
   height: 100%;
-  min-height: 140vh;
+  min-height: 100vh;
   box-sizing: border-box;
 }
 
